# square_administration

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py
square_administration/: configuration.py  main.py  messages.py
square_administration/data/: config.ini  config.sample.ini  config.testing.ini  config.testing.sample.ini
square_administration/pydantic_models/: authentication.py  core.py
square_administration/routes/: authentication.py  core.py
square_administration/utils/: common.py
square_administration/utils/routes/: authentication.py  core.py
tests/: conftest.py  test_1.py
